# electrix-api

./: .dockerignore  .env.template  .gitignore  Cargo.toml  Dockerfile  Dockerfile-check  README.md  compile_app.sh  deny.toml  run_app.sh  run_static_check.sh
.github/workflows/: static_check.yml
src/: data.rs  main.rs  utils.rs
src/data/: device.rs  device_data.rs  event.rs  event_data.rs  event_item.rs  event_item_with_id.rs  event_mapped_data.rs  event_mapped_item.rs  event_settings.rs  host.rs  mod.rs  voltage_anomaly.rs
src/utils/: csv_writers.rs  environ.rs  fetchers.rs  handlers.rs  http.rs  mod.rs  tools.rs
