[package]
name = "electrix-api"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
csv = { version = "1.3.1"}
reqwest = { version = "0.12.22", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = { version = "1.0.142" }
tokio = { version = "1.47.1", features = ["macros", "rt", "rt-multi-thread"] }
