[package]
name = "electrix-api"
version = "0.1.1"
edition = "2024"
license = "MIT"

[dependencies]
csv = { version = "1.3.1", default-features = false }
reqwest = { version = "0.12.23", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.225", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
tokio = { version = "1.47.1", default-features = false , features = ["macros", "rt-multi-thread"] }
