[package]
name = "electrix-api"
version = "0.1.2"
edition = "2024"
license = "MIT"

[dependencies]
csv = { version = "1.4.0", default-features = false }
reqwest = { version = "0.13.2", default-features = false, features = ["default-tls", "json"] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = { version = "1.0.149", default-features = false }
tokio = { version = "1.50.0", default-features = false , features = ["macros", "rt-multi-thread"] }
